Fix: Improve sync and data consistency
- Handle deleted remote todos:
  - If remote is deleted and local is not, mark local as deleted.
  - If both are deleted, remove from local database.
- Database:
  - `getTodoById`: Handle potential duplicate entries by keeping the most recently updated and deleting others.
  - `getCurrentDeviceId`: Handle potential multiple "current device" entries by keeping the most recently seen and correcting others.
- Sync Service:
  - Add `_cleanupDeletedTodos` to permanently remove local todos that are confirmed deleted (no longer exist) on the remote after a sync.
  - Fix potential issue in `_syncDevices` where multiple devices with the same ID could exist locally by fetching first or null.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,10 +48,17 @@ dependencies:
 
   # Networking & Connectivity
   connectivity_plus: ^5.0.2
+  network_info_plus: ^4.1.0  # Network interface discovery
+  nsd: ^4.0.3               # Network service discovery (mDNS)
+  
+  # Security
+  crypto: ^3.0.3            # Cryptographic functions
+  pointycastle: ^3.7.3      # Advanced cryptography
+  
+  # HTTP & Utilities
   http: ^1.1.2
-
-  # Utilities
-  uuid: ^4.2.1
+  uuid: ^4.2.1              # UUID generation (using latest version)
+  collection: ^1.17.2       # Advanced collections
   json_annotation: ^4.8.1
   freezed_annotation: ^2.4.1
   equatable: ^2.0.5
